fixed long enddefs wrapping

--- a/src/components/TypeDefNew/TypeDefNew.css
+++ b/src/components/TypeDefNew/TypeDefNew.css
@@ -4,3 +4,7 @@
 .new_typedef_category .ms-ChoiceField-labelWrapper {
   max-width: none;
 }
+.form_rel_enddef td { padding:0.25em; }
+.enddef_select {
+  width: 10em;
+}
